--- a/codes/06.DataFrame_filters.ipynb
+++ b/codes/06.DataFrame_filters.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
        "2  005670   ACTS  1185  1.28"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
        "005670   ACTS  1185  1.28"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
        "Index(['037730', '036360', '005670'], dtype='object', name='종목코드')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
        "Index(['종목명', '현재가', '등락률'], dtype='object')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
        " pandas.core.series.Series)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,81 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>종목명</th>\n",
-       "      <th>현재가</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>종목코드</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>037730</th>\n",
-       "      <td>3R</td>\n",
-       "      <td>1510</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>036360</th>\n",
-       "      <td>3SOFT</td>\n",
-       "      <td>1790</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>005670</th>\n",
-       "      <td>ACTS</td>\n",
-       "      <td>1185</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          종목명   현재가\n",
-       "종목코드               \n",
-       "037730     3R  1510\n",
-       "036360  3SOFT  1790\n",
-       "005670   ACTS  1185"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#df_components.iloc[1:3,0:2]\n",
-    "#df_components.iloc[:,0:2] #행은 모두\n",
-    "df_components.iloc[1:3, :] #열은 모두"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +323,79 @@
        "005670   ACTS  1185  1.28"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#df_components.iloc[1:3,0:2]\n",
+    "#df_components.iloc[:,0:2] #행은 모두\n",
+    "df_components.iloc[1:3, :] #열은 모두"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>종목명</th>\n",
+       "      <th>현재가</th>\n",
+       "      <th>등락률</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>종목코드</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>036360</th>\n",
+       "      <td>3SOFT</td>\n",
+       "      <td>1790</td>\n",
+       "      <td>1.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>005670</th>\n",
+       "      <td>ACTS</td>\n",
+       "      <td>1185</td>\n",
+       "      <td>1.28</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          종목명   현재가   등락률\n",
+       "종목코드                     \n",
+       "036360  3SOFT  1790  1.65\n",
+       "005670   ACTS  1185  1.28"
+      ]
+     },
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +461,7 @@
        "005670  1185  1.28"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -506,10 +504,12 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>종목명</th>\n",
+       "      <th>현재가</th>\n",
        "      <th>등락률</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>종목코드</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "    </tr>\n",
@@ -518,11 +518,13 @@
        "    <tr>\n",
        "      <th>037730</th>\n",
        "      <td>3R</td>\n",
+       "      <td>1510</td>\n",
        "      <td>7.36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>005670</th>\n",
        "      <td>ACTS</td>\n",
+       "      <td>1185</td>\n",
        "      <td>1.28</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -530,13 +532,13 @@
        "</div>"
       ],
       "text/plain": [
-       "         종목명   등락률\n",
-       "종목코드              \n",
-       "037730    3R  7.36\n",
-       "005670  ACTS  1.28"
+       "         종목명   현재가   등락률\n",
+       "종목코드                    \n",
+       "037730    3R  1510  7.36\n",
+       "005670  ACTS  1185  1.28"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +581,7 @@
        "Name: 현재가, dtype: bool"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +644,7 @@
        "036360  3SOFT  1790  1.65"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,11 +655,106 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 컬럼 중심 사용"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>종목명</th>\n",
+       "      <th>등락률</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>종목코드</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>037730</th>\n",
+       "      <td>3R</td>\n",
+       "      <td>7.36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>036360</th>\n",
+       "      <td>3SOFT</td>\n",
+       "      <td>1.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>005670</th>\n",
+       "      <td>ACTS</td>\n",
+       "      <td>1.28</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          종목명   등락률\n",
+       "종목코드               \n",
+       "037730     3R  7.36\n",
+       "036360  3SOFT  1.65\n",
+       "005670   ACTS  1.28"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#종목명만 가져오는 빙식\n",
+    "#df_components.iloc[:,0:1]\n",
+    "#df_components[['종목명']]\n",
+    "df_components[['종목명','등락률']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(pandas.core.series.Series, pandas.core.frame.DataFrame)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(df_components['종목명']), type(df_components[['종목명']])"
+   ]
   }
  ],
  "metadata": {
