--- a/codes/07.DataFrame_aggregations.ipynb
+++ b/codes/07.DataFrame_aggregations.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
        " dtype: int64)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        " dtype: float64)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,10 +152,149 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### group by"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>테마</th>\n",
+       "      <th>종목명</th>\n",
+       "      <th>PER</th>\n",
+       "      <th>PBR</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2차전지(생산)</td>\n",
+       "      <td>SK이노베이션</td>\n",
+       "      <td>10.19</td>\n",
+       "      <td>1.29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>해운</td>\n",
+       "      <td>팬오션</td>\n",
+       "      <td>21.23</td>\n",
+       "      <td>0.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>시스템반도체</td>\n",
+       "      <td>티엘아이</td>\n",
+       "      <td>35.97</td>\n",
+       "      <td>1.12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>해운</td>\n",
+       "      <td>HMM</td>\n",
+       "      <td>21.52</td>\n",
+       "      <td>3.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>시스템반도체</td>\n",
+       "      <td>아이에이</td>\n",
+       "      <td>37.32</td>\n",
+       "      <td>3.55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2차전지(생산)</td>\n",
+       "      <td>LG화학</td>\n",
+       "      <td>83.06</td>\n",
+       "      <td>3.75</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         테마      종목명    PER   PBR\n",
+       "0  2차전지(생산)  SK이노베이션  10.19  1.29\n",
+       "1        해운      팬오션  21.23  0.95\n",
+       "2    시스템반도체     티엘아이  35.97  1.12\n",
+       "3        해운      HMM  21.52  3.20\n",
+       "4    시스템반도체     아이에이  37.32  3.55\n",
+       "5  2차전지(생산)     LG화학  83.06  3.75"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = [\n",
+    "    [\"2차전지(생산)\", \"SK이노베이션\", 10.19, 1.29],\n",
+    "    [\"해운\", \"팬오션\", 21.23, 0.95],\n",
+    "    [\"시스템반도체\", \"티엘아이\", 35.97, 1.12],\n",
+    "    [\"해운\", \"HMM\", 21.52, 3.20],\n",
+    "    [\"시스템반도체\", \"아이에이\", 37.32, 3.55],\n",
+    "    [\"2차전지(생산)\", \"LG화학\", 83.06, 3.75]\n",
+    "]\n",
+    "\n",
+    "columns = [\"테마\", \"종목명\", \"PER\", \"PBR\"]\n",
+    "df_first = pd.DataFrame(data=data, columns=columns)\n",
+    "df_first"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### like conditions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unterminated string literal (detected at line 1) (4002784590.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[7], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    df_first[df_first['테마] == '2차전지']\u001b[0m\n\u001b[0m                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unterminated string literal (detected at line 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_first[df_first['테마] == '2차전지']\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
