--- a/codes/09.numpys.ipynb
+++ b/codes/09.numpys.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
        "(list, 3)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
        "[1, 2, 3, 4, 5, 6]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
        "(numpy.ndarray, 3)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
        "array([5, 7, 9])"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
        "array([0.25, 0.4 , 0.5 ])"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        "array([ 4, 10, 18])"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
        "(array([2, 0, 6]), array([-2,  0, -6]))"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
        "[-1, 2, -3, -1, 2, -3]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "array([-2,  4, -6])"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
        "array([False,  True,  True])"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        "array([20, 30])"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,28 +300,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "index 20 is out of bounds for axis 0 with size 3",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[86], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mcond_array_first\u001b[49m\u001b[43m[\u001b[49m\u001b[43mconditions\u001b[49m\u001b[43m]\u001b[49m\n",
-      "\u001b[0;31mIndexError\u001b[0m: index 20 is out of bounds for axis 0 with size 3"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cond_array_first[conditions]"
+    "#cond_array_first[conditions]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +318,7 @@
        "True"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +338,7 @@
        "array([False, False,  True])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +360,7 @@
        "False"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +380,7 @@
        "True"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +400,7 @@
        "array([False,  True, False])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +422,7 @@
        "array([20])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +487,7 @@
        "array([ 3,  7, 11, 15])"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +516,7 @@
        "array([7, 8])"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +537,7 @@
        "array([3, 3])"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +565,7 @@
        "       [0., 0., 0.]])"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +586,7 @@
        "       [1., 1., 1.]])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +608,7 @@
        "       [0., 0., 1.]])"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +635,7 @@
        "((4, 2),)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +655,7 @@
        "2"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +675,7 @@
        "dtype('int64')"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +695,7 @@
        "8"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -727,7 +715,7 @@
        "(64, 64)"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -756,13 +744,100 @@
        "((4, 2), dtype('float128'), 128)"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "array_float.shape, array_float.dtype, array_float.nbytes        #AI원자화에 이용"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Merge\n",
+    "- stack(), concatenate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merge_array_first = np.array([[1,2],[3,4]])\n",
+    "merge_array_second = np.array([[5,6],[7,8]])\n",
+    "merge_array_third = np.array([[10,11], [12,13],[14,15]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((2, 2), (2, 2), (3, 2))"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merge_array_first.shape, merge_array_second.shape, merge_array_third.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 5,  6],\n",
+       "       [ 7,  8],\n",
+       "       [10, 11],\n",
+       "       [12, 13],\n",
+       "       [14, 15]])"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 행 merge\n",
+    "np.concatenate((merge_array_second, merge_array_third), axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[5, 6, 1, 2],\n",
+       "       [7, 8, 3, 4]])"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#열 merge\n",
+    "#np.concatenate((merge_array_second, merge_array_third), axis=0) -->error/ 열 크기 다름\n",
+    "np.concatenate((merge_array_second, merge_array_first), axis=1)"
    ]
   },
   {
