--- a/quests/worldband_datas.ipynb
+++ b/quests/worldband_datas.ipynb
@@ -2,43 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: wbdata in /usr/local/lib/python3.11/site-packages (1.0.0)\n",
-      "Requirement already satisfied: appdirs<2.0,>=1.4 in /usr/local/lib/python3.11/site-packages (from wbdata) (1.4.4)\n",
-      "Requirement already satisfied: backoff<3.0.0,>=2.2.1 in /usr/local/lib/python3.11/site-packages (from wbdata) (2.2.1)\n",
-      "Requirement already satisfied: cachetools<6.0.0,>=5.3.2 in /usr/local/lib/python3.11/site-packages (from wbdata) (5.5.0)\n",
-      "Requirement already satisfied: dateparser<2.0.0,>=1.2.0 in /usr/local/lib/python3.11/site-packages (from wbdata) (1.2.0)\n",
-      "Requirement already satisfied: decorator<6.0.0,>=5.1.1 in /usr/local/lib/python3.11/site-packages (from wbdata) (5.1.1)\n",
-      "Requirement already satisfied: requests<3.0,>=2.0 in /usr/local/lib/python3.11/site-packages (from wbdata) (2.32.3)\n",
-      "Requirement already satisfied: shelved-cache<0.4.0,>=0.3.1 in /usr/local/lib/python3.11/site-packages (from wbdata) (0.3.1)\n",
-      "Requirement already satisfied: tabulate<0.9.0,>=0.8.5 in /usr/local/lib/python3.11/site-packages (from wbdata) (0.8.10)\n",
-      "Requirement already satisfied: python-dateutil in /usr/local/lib/python3.11/site-packages (from dateparser<2.0.0,>=1.2.0->wbdata) (2.9.0.post0)\n",
-      "Requirement already satisfied: pytz in /usr/local/lib/python3.11/site-packages (from dateparser<2.0.0,>=1.2.0->wbdata) (2024.2)\n",
-      "Requirement already satisfied: regex!=2019.02.19,!=2021.8.27 in /usr/local/lib/python3.11/site-packages (from dateparser<2.0.0,>=1.2.0->wbdata) (2024.11.6)\n",
-      "Requirement already satisfied: tzlocal in /usr/local/lib/python3.11/site-packages (from dateparser<2.0.0,>=1.2.0->wbdata) (5.2)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.11/site-packages (from requests<3.0,>=2.0->wbdata) (3.4.0)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.11/site-packages (from requests<3.0,>=2.0->wbdata) (3.10)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.11/site-packages (from requests<3.0,>=2.0->wbdata) (2.2.3)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/site-packages (from requests<3.0,>=2.0->wbdata) (2024.8.30)\n",
-      "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.11/site-packages (from python-dateutil->dateparser<2.0.0,>=1.2.0->wbdata) (1.17.0)\n",
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager, possibly rendering your system unusable.It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv. Use the --root-user-action option if you know what you are doing and want to suppress this warning.\u001b[0m\u001b[33m\n",
-      "\u001b[0m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install -U wbdata"
+    "import wbdata"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 연습문제 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +109,7 @@
        "  91  PEFA_CRPFM"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +324,7 @@
        "TRD.ACRS.BRDR.RK.DB19                              Rank: Trading across borders (1=most business-friendly regulations)"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +348,7 @@
        "USA   United States"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,21 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# source :1  Doing Business\n",
-    "# indicator : ENF.CONT .COEN.ENFE.PR\n",
-    "# countries\n",
-    "# ARE   United Arab Emirates\n",
-    "# GBR   United Kingdom\n",
-    "# USA   United States"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -424,9 +390,6 @@
     }
    ],
    "source": [
-    "#wbdata.get_data(indicator='ENF.CONT .COEN.ENFE.PR', country=['ARE','GBR','USA'])\n",
-    "\n",
-    "\n",
     "# 데이터 가져오기\n",
     "df = wbdata.get_data(indicator='SL.UEM.TOTL.ZS', country=['FR', 'DE', 'GB'], date=('2010', '2020'))\n",
     "\n",
@@ -438,29 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'wbdata' has no attribute 'get_country'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[72], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m indicators \u001b[38;5;241m=\u001b[39m \u001b[43mwbdata\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_country\u001b[49m(country\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mUSA\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(indicators)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'wbdata' has no attribute 'get_country'"
-     ]
-    }
-   ],
-   "source": [
-    "indicators = wbdata.get_country(country='USA')\n",
-    "print(indicators)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -487,37 +428,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Empty DataFrame\n",
+      "Columns: [indicator, country, countryiso3code, date, value, unit, obs_status, decimal]\n",
+      "Index: []\n",
+      "Empty DataFrame\n",
+      "Columns: [indicator, country, countryiso3code, date, value, unit, obs_status, decimal]\n",
+      "Index: []\n",
+      "Empty DataFrame\n",
+      "Columns: [indicator, country, countryiso3code, date, value, unit, obs_status, decimal]\n",
+      "Index: []\n"
+     ]
+    }
+   ],
    "source": [
-    "# 'date' 컬럼을 숫자로 변환\n",
-    "df_second['date'] = pd.to_numeric(df_second['date'], errors='coerce')\n",
-    "\n",
-    "# 연도순으로 정렬\n",
-    "df_second.sort_values(by='date', inplace=True)\n",
-    "\n"
+    "for country in ['FR', 'DE', 'GB']:\n",
+    "    country_data = df_second[df_second['countryiso3code'] == country]\n",
+    "    print(country_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 데이터프레임 생성\n",
-    "df_second = pd.DataFrame(df)\n",
-    "\n",
-    "# 'date' 컬럼을 연도 형식으로 변환\n",
-    "df_second['date'] = pd.to_numeric(df_second['date'])\n",
-    "\n",
-    "# 연도순으로 정렬\n",
-    "df_second.sort_values(by='date', inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +470,6 @@
     }
    ],
    "source": [
-    "\n",
     "# 시각화\n",
     "plt.figure(figsize=(10, 6))\n",
     "\n",
@@ -553,13 +490,6 @@
     "plt.show()\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
